update: Add missing og meta tags.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emmanuel Canto - Curriculum Vitae</title>
     <link rel="icon" href="public/favicon.ico" type="image/x-icon">
-
-    <meta name="description" content="Curriculum Vitae of Emmanuel Canto Vázquez, a Front end and mobile engineer.">
-
-    <meta property="og:title" content="The Rock" />
-    <meta property="og:type" content="video.movie" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Curriculum Vitae of Emmanuel Canto Vazquez, a Front end and mobile engineer.">
+    <meta property="og:title" content="Emmanuel Canto Vazquez - CV" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta property="og:description" content="A concise overview of Emmanuel Canto Vazquez's professional background and skills." />
 </head>
 <body>
     <header>
@@ -48,7 +48,7 @@
                 <li>Delivery of new app features enhancing client growth and engagement.</li>
                 <li>Quick response to critical and non-critical incidents in development and production.</li>
                 <li>Utilized React DevTools and Reactotron to inspect and debug issues.</li>
-                <li>Utilized Postmant, Reactotron and Proximan to intercept and verify API responses.</li>
+                <li>Utilized Postman, Reactotron and Proximan to intercept and verify API responses.</li>
                 <li>Implementation of unit tests for key functionalities, achieving 50% coverage.</li>
             </ul>
         </div>
