update: Add tel link.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Emmanuel Canto Vazquez - CV" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta property="og:description" content="A concise overview of Emmanuel Canto Vazquez's professional background and skills." />
+    <meta property="og:description" content="This is my professional background and skills resumed in a single page." />
 </head>
 <body>
     <header>
@@ -91,16 +91,16 @@
         <h2>Contact</h2>
         Puebla, Mexico
         <br>
-        +52 123 456 7890
-        <br>
         <span>
-            email: 
-            <a href="mailto:emmanuel.canvaz@outlook.com">emmanuel.canvaz@outlook.com</a>
+            phone: <a href="tel:+522225656685">+52 222 565 6685</a>
         </span>
         <br>
         <span>
-            linkedin: 
-            <a href="https://www.linkedin.com/in/emmanuel-canto-vazquez" target="_blank">emmanuel canto vazquez</a>
+            email: <a href="mailto:emmanuel.canvaz@outlook.com">emmanuel.canvaz@outlook.com</a>
+        </span>
+        <br>
+        <span>
+            LinkedIn: <a href="https://www.linkedin.com/in/emmanuel-canto-vazquez" target="_blank">emmanuel canto vazquez</a>
         </span>
     </section>
 </body>
